# CosyVoice

./: .gitignore  .gitmodules  main.ipynb  main.py  pyproject.toml  webui.py
cosyvoice/: __init__.py
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/flow/: flow.py  flow_matching.py
cosyvoice/hifigan/: discriminator.py  generator.py
cosyvoice/utils/: common.py  file_utils.py  logging_utils.py
cosyvoice/vllm/: cosyvoice2.py
doc/: infer-npu.md
examples/: infer_torch.py  infer_with_ascend.py  infer_with_torch.py  infer_with_vllm.py
script/: fast.sh  install_for_cann.sh  modify_onnx.py  print_pt.py
test/: 1.py
